// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table.rowSelection render with default selection correctly 1`] = `
<div
  class="g-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-root g-dropdown-css-var g-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
>
  <ul
    class="g-dropdown-menu g-dropdown-menu-root g-dropdown-menu-vertical g-dropdown-menu-light css-var-root g-dropdown-css-var css-var-root g-dropdown-menu-css-var"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
      data-menu-id="rc-menu-uuid-all"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="g-dropdown-menu-title-content"
      >
        Select all data
      </span>
    </li>
    <li
      class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
      data-menu-id="rc-menu-uuid-invert"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="g-dropdown-menu-title-content"
      >
        Invert current page
      </span>
    </li>
    <li
      class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
      data-menu-id="rc-menu-uuid-none"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="g-dropdown-menu-title-content"
      >
        Clear all data
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</div>
`;

exports[`Table.rowSelection should support getPopupContainer 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="g-table-selection-col"
                />
              </colgroup>
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell g-table-selection-column"
                    scope="col"
                  >
                    <div
                      class="g-table-selection"
                    >
                      <label
                        class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                      >
                        <span
                          class="g-checkbox g-wave-target"
                        >
                          <input
                            aria-label="Custom selection"
                            class="g-checkbox-input"
                            type="checkbox"
                          />
                        </span>
                      </label>
                      <div
                        class="g-table-selection-extra"
                      >
                        <span
                          class="g-dropdown-trigger g-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="gicon gicon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <div
                          class="g-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-root g-dropdown-css-var g-dropdown-placement-bottomLeft"
                          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
                        >
                          <ul
                            class="g-dropdown-menu g-dropdown-menu-root g-dropdown-menu-vertical g-dropdown-menu-light css-var-root g-dropdown-css-var css-var-root g-dropdown-menu-css-var"
                            data-menu-list="true"
                            role="menu"
                            tabindex="0"
                          >
                            <li
                              class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
                              data-menu-id="rc-menu-uuid-all"
                              role="menuitem"
                              tabindex="-1"
                            >
                              <span
                                class="g-dropdown-menu-title-content"
                              >
                                Select all data
                              </span>
                            </li>
                            <li
                              class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
                              data-menu-id="rc-menu-uuid-invert"
                              role="menuitem"
                              tabindex="-1"
                            >
                              <span
                                class="g-dropdown-menu-title-content"
                              >
                                Invert current page
                              </span>
                            </li>
                            <li
                              class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
                              data-menu-id="rc-menu-uuid-none"
                              role="menuitem"
                              tabindex="-1"
                            >
                              <span
                                class="g-dropdown-menu-title-content"
                              >
                                Clear all data
                              </span>
                            </li>
                          </ul>
                          <div
                            aria-hidden="true"
                            style="display: none;"
                          />
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="g-pagination g-table-pagination g-table-pagination-end css-var-root"
      >
        <li
          aria-disabled="true"
          class="g-pagination-prev g-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="gicon gicon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="g-pagination-next g-pagination-disabled"
          title="Next Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="gicon gicon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection should support getPopupContainer from ConfigProvider 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="g-table-selection-col"
                />
              </colgroup>
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell g-table-selection-column"
                    scope="col"
                  >
                    <div
                      class="g-table-selection"
                    >
                      <label
                        class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                      >
                        <span
                          class="g-checkbox g-wave-target"
                        >
                          <input
                            aria-label="Custom selection"
                            class="g-checkbox-input"
                            type="checkbox"
                          />
                        </span>
                      </label>
                      <div
                        class="g-table-selection-extra"
                      >
                        <span
                          class="g-dropdown-trigger g-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="gicon gicon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <div
                          class="g-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-root g-dropdown-css-var g-dropdown-placement-bottomLeft"
                          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
                        >
                          <ul
                            class="g-dropdown-menu g-dropdown-menu-root g-dropdown-menu-vertical g-dropdown-menu-light css-var-root g-dropdown-css-var css-var-root g-dropdown-menu-css-var"
                            data-menu-list="true"
                            role="menu"
                            tabindex="0"
                          >
                            <li
                              class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
                              data-menu-id="rc-menu-uuid-all"
                              role="menuitem"
                              tabindex="-1"
                            >
                              <span
                                class="g-dropdown-menu-title-content"
                              >
                                Select all data
                              </span>
                            </li>
                            <li
                              class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
                              data-menu-id="rc-menu-uuid-invert"
                              role="menuitem"
                              tabindex="-1"
                            >
                              <span
                                class="g-dropdown-menu-title-content"
                              >
                                Invert current page
                              </span>
                            </li>
                            <li
                              class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
                              data-menu-id="rc-menu-uuid-none"
                              role="menuitem"
                              tabindex="-1"
                            >
                              <span
                                class="g-dropdown-menu-title-content"
                              >
                                Clear all data
                              </span>
                            </li>
                          </ul>
                          <div
                            aria-hidden="true"
                            style="display: none;"
                          />
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="g-pagination g-table-pagination g-table-pagination-end css-var-root"
      >
        <li
          aria-disabled="true"
          class="g-pagination-prev g-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="gicon gicon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="g-pagination-next g-pagination-disabled"
          title="Next Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="gicon gicon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection use column as selection column when key is \`selection-column\` 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="g-table-selection-col"
                />
              </colgroup>
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell g-table-selection-column"
                    scope="col"
                  >
                    <div
                      class="g-table-selection"
                    >
                      <label
                        class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                      >
                        <span
                          class="g-checkbox g-wave-target"
                        >
                          <input
                            aria-label="Select all"
                            class="g-checkbox-input"
                            type="checkbox"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="g-table-cell g-table-selection-column"
                  >
                    <label
                      class="g-checkbox-wrapper css-var-root g-checkbox-css-var"
                    >
                      <span
                        class="g-checkbox g-wave-target"
                      >
                        <input
                          class="g-checkbox-input"
                          type="checkbox"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="g-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="g-pagination g-table-pagination g-table-pagination-end css-var-root"
      >
        <li
          aria-disabled="true"
          class="g-pagination-prev g-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="gicon gicon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="g-pagination-next g-pagination-disabled"
          title="Next Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="gicon gicon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
